// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button component renders a disabled icon button 1`] = `
<button
  aria-label="UserIcon"
  class="MuiButtonBase-root MuiIconButton-root IconButton IconButton--medium IconButton--disabled Mui-disabled Mui-disabled"
  disabled=""
  tabindex="-1"
  type="button"
>
  <span
    class="MuiIconButton-label"
  >
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
      />
    </svg>
  </span>
</button>
`;

exports[`Button component renders a flat button on dark background 1`] = `
<button
  aria-disabled="false"
  class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButtonBase-root MuiButton-root MuiButton-text Button Button--dark-background MuiButton-textPrimary"
  role="button"
  tabindex="0"
  type="button"
>
  <span
    class="MuiButton-label"
  >
    <span
      class="MuiButton-label"
    >
      Caption
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </span>
  <span
    class="MuiTouchRipple-root"
  />
</button>
`;

exports[`Button component renders a small icon button 1`] = `
<button
  aria-label="UserIcon"
  class="MuiButtonBase-root MuiIconButton-root IconButton IconButton--small"
  tabindex="0"
  type="button"
>
  <span
    class="MuiIconButton-label"
  >
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
      />
    </svg>
  </span>
  <span
    class="MuiTouchRipple-root"
  />
</button>
`;

exports[`Button component renders an icon button 1`] = `
<button
  aria-label="User"
  class="MuiButtonBase-root MuiIconButton-root IconButton IconButton--medium"
  tabindex="0"
  type="button"
>
  <span
    class="MuiIconButton-label"
  >
    Caption
  </span>
  <span
    class="MuiTouchRipple-root"
  />
</button>
`;

exports[`Button component renders an outlined button on dark background 1`] = `
<button
  aria-disabled="false"
  class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButtonBase-root MuiButton-root MuiButton-outlined Button Button--dark-background MuiButton-outlinedPrimary"
  role="button"
  tabindex="0"
  type="button"
>
  <span
    class="MuiButton-label"
  >
    <span
      class="MuiButton-label"
    >
      Caption
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </span>
  <span
    class="MuiTouchRipple-root"
  />
</button>
`;

exports[`Button component renders correctly 1`] = `
<button
  aria-disabled="false"
  class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButtonBase-root MuiButton-root MuiButton-contained Button MuiButton-containedPrimary"
  role="button"
  tabindex="0"
  type="button"
>
  <span
    class="MuiButton-label"
  >
    <span
      class="MuiButton-label"
    >
      Caption
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </span>
  <span
    class="MuiTouchRipple-root"
  />
</button>
`;
